--- a/package.json
+++ b/package.json
@@ -14,14 +14,12 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "aws-sdk": "^2.1242.0",
-    "klaw-sync": "^6.0.0",
-    "mime-types": "^2.1.35",
+    "fast-glob": "^3.3.3",
+    "file-type": "^20.5.0",
     "shortid": "^2.2.16",
     "slash": "^5.0.0"
   },
   "devDependencies": {
-    "@types/klaw-sync": "^6.0.5",
-    "@types/mime-types": "^2.1.4",
     "@types/shortid": "^2.2.0",
     "@vercel/ncc": "^0.34.0",
     "esbuild": "^0.25.3",
